--- a/index.html
+++ b/index.html
@@ -20,17 +20,166 @@
                     <a href="about.html">About</a>
                 </div>
             </div>
-
-
             <div class="right-side">
                 <div class="brand">
                     <div>BIJESH SINGHA</div>
                 </div>
             </div>
-
-            
+        </div>
+        <div class="content-wrapper">
+            <div class="portfolio-items-wrapper">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg1.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images/pbg.jpg)"></div>
+                    <div class="image-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/logo3.png">
+                        </div>
+                        <div class="subtite">
+                            I built the Great Pyramid
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
+<script>
+  const portfolioItems = document.querySelectorAll('.portfolio-item-wrapper');
+
+  portfolioItems.forEach(portfolioItem => {
+    portfolioItem.addEventListener('mouseover', () => {
+      console.log(portfolioItem.childNodes[1].classList)
+      portfolioItem.childNodes[1].classList.add('image-blur');
+    });
+
+    portfolioItem.addEventListener('mouseout', () => {
+      console.log(portfolioItem.childNodes[1].classList)
+      portfolioItem.childNodes[1].classList.remove('image-blur');
+    });
+  });
+
+</script>
 
 </html>
